Customized the name and screenshot

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Toolbox
-Theme URI: http://wordpress.org/extend/themes/toolbox
-Author: Automattic
+Theme Name: Chop Photoset A
+Theme URI: https://github.com/choppingblock/chopphotosetA-wp-theme
+Author: The Chopping Block, with full credit to Automatic
 Author URI: http://automattic.com/
 Description: A semantic, HTML5, canvas for CSS artists and an ultra-minimal set of super-clean templates for your own WordPress theme development.
 Version: 1.4
