--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* @override 
+	http://chopphotoseta:8888/wp-content/themes/chopphotosetA-wp-theme/style.css */
+
 /*
 Theme Name: Chop Photoset A
 Theme URI: https://github.com/choppingblock/chopphotosetA-wp-theme
@@ -388,4 +391,29 @@ article.comment {
 
 #colophon {
 	padding: 1em 0 0;
+}
+
+/* =CSS3 Gallery
+-------------------------------------------------------------- */
+
+#slide_container {
+  width:640px;
+  height:426px;
+  overflow:hidden; /* So the sliding bit doesn't stick out. */
+  margin:0 auto;
+}
+#slide_images {
+  /* This is the bit that moves. It has 4 images, so 4 * 450 = 1800. You could use javascript
+  to work this out instead by counting images. */
+  width:62560px;
+
+  -webkit-transition:all 1.0s ease-in-out;
+  -moz-transition:all 1.0s ease-in-out;
+  -o-transition:all 1.0s ease-in-out;
+  transition:all 1.0s ease-in-out;
+}
+#slide_images img {
+  padding:0;
+  margin:0;
+  float:left; /* All the images are in a row next to each other. */
 }
